force-app/main/default/objects/CsvUploadLog__c/CsvUploadLog__c.object-meta.xml
<CustomObject>
    <description>This object stores the records of the batch class when you upload the CSV file.</description>
    <label>CsvUploadLog</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>CsvUploadLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CsvUploadLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>