force-app/main/default/objects/CsvUploadLog__c/fields/Campaign_Created__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Created__c</fullName>
    <label>Campaign created</label>
    <length>100</length>
    <type>Text</type>
</CustomField>