force-app/main/default/objects/CsvUploadLog__c/fields/Contact_created__c.field-meta.xml
<CustomField>
    <fullName>Contact_created__c</fullName>
    <label>Contact created</label>
    <length>100</length>
    <type>Text</type>
</CustomField>