force-app/main/default/objects/CsvUploadLog__c/fields/Opportunities_created__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_created__c</fullName>
    <label>Opportunities created</label>
    <length>100</length>
    <type>Text</type>
</CustomField>